# NLP

./: nlp.ipynb  pyproject.toml  texts.txt
