[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["david-seu <david.seu@stud.ubbcluj.ro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
spacy = "^3.8.4"
gensim = "^4.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
